; ModuleID = '/home/carl/AnghaBench/reactos/subsystems/mvdm/ntvdm/dos/extr_mouse32.c_BiosPs2Service.c'
source_filename = "/home/carl/AnghaBench/reactos/subsystems/mvdm/ntvdm/dos/extr_mouse32.c_BiosPs2Service.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MouseContext = common dso_local global i32 0, align 4
@BIOS_MISC_INTERRUPT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @BiosPs2Service(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = call i32 (...) @getAX()
  store i32 %5, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @setAL(i32 %6)
  %8 = call i32 @setAH(i32 194)
  %9 = load i32, i32* @BIOS_MISC_INTERRUPT, align 4
  %10 = call i32 @Int32Call(i32* @MouseContext, i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @setAX(i32 %11)
  %13 = load i32, i32* %2, align 4
  ret i32 %13
}

declare dso_local i32 @getAX(...) #1

declare dso_local i32 @setAL(i32) #1

declare dso_local i32 @setAH(i32) #1

declare dso_local i32 @Int32Call(i32*, i32) #1

declare dso_local i32 @setAX(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
